--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,10 +8,10 @@ jobs:
 
     steps:
     - name: Checkout del código
-      uses: actions/checkout@master
+      uses: actions/checkout@v2
 
-    - name: Install dependencies
-      run: npm install
+    # - name: Install dependencies
+    #   run: npm install
 
-    - name: Build
-      run: npm run build
+    # - name: Build
+    #   run: npm run build
